# my-fastapi-app

./: .gitignore  Dockerfile  Dockfile  pyproject.toml
api/: main.py
api/cruds/: task.py
api/models/: task.py
api/routers/: __init__.py  calc.py  done.py  tasks.py
api/schemas/: calc.py  done.py  task.py
tests/: conftest.py  test_main.py
