[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = { extras = ["standard"], version = ">=0.34.0,<0.35.0" }
sqlalchemy = ">=2.0.40,<3.0.0"
aiomysql = ">=0.2.0,<0.3.0"
httpx = ">=0.28.1,<0.29.0"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
